[project]
name = "gmaps_scraper"
version = "0.1.0"
description = "Scrape Google Maps Reviews"
authors = [
    {name = "Cem Karahan"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium (>=4.34.2,<5.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "dateparser (>=1.2.2,<2.0.0)"
]

[[tool.poetry.packages]]
include = "gmaps"
from    = "src"

[tool.poetry.scripts]
greview = "gmaps.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
