[project]
name = "gmaps_scraper"
version = "0.1.0"
description = "Scrape Google Maps Reviews"
authors = [
    {name = "Cem Karahan <karahancemm@gmail.com>"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "selenium (>=4.34.2,<5.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "dateparser (>=1.2.2,<2.0.0)",
    "fasteners (>=0.19,<0.20)",
    "pandas (>=2.3.1,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pyinstaller = {version = "^6.14.2", python = "<3.14"}

[[tool.poetry.packages]]
include = "gmaps"
from    = "src"

[tool.poetry.scripts]
greview = "gmaps.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
